tests/neg/call.stk
def foo(x: Int): Unit = x p

def bar(x: Int): Unit =
  foo  // error
  x p

def main =
  bar    // error
  10 p
